doc: verify email documentation
