# src/routes/auth.routes.ts
@@ -1,7 +1,10 @@
 import express from "express";
+import { handleSignup, handleVerifyEmail } from "../controllers";
 
 const authRoutes = express.Router();
 
-authRoutes.post("/register");
+authRoutes.post("/register", handleSignup);
+
+authRoutes.post("/verification", handleVerifyEmail);
 
 export default authRoutes;
